modified:   hash_tabl/hash_tabl/Form1.Designer.cs 	modified:   hash_tabl/hash_tabl/Form1.cs 	new file:   hash_tabl/hash_tabl/MyHashEnum.cs 	modified:   hash_tabl/hash_tabl/MyHashTable.cs 	modified:   hash_tabl/hash_tabl/hash_tabl.csproj

--- a/hash_tabl/hash_tabl/hash_tabl.csproj
+++ b/hash_tabl/hash_tabl/hash_tabl.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="HashItem.cs" />
+    <Compile Include="MyHashEnum.cs" />
     <Compile Include="MyHashTable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
